# Notes-App-with-Rust

./: .gitignore  Cargo.toml  README.md
migrations/2024-07-27-173352_create_posts/: up.sql
migrations/2024-07-27-174158_notes_table/: down.sql  up.sql
src/: schema.rs
